syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message PingReq {
	double total_tick_time = 3;
	bytes sc_data = 12;
	float ue_time = 1;
	uint32 client_time = 13;
	uint32 seq = 15;
}